--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,8 @@
 {
     "name": "vagrant/c2o-dev-test-form",
-    "require": {},
+    "require": {
+        "ext-json": "^1.6"
+    },
     "autoload": {
         "psr-4": { "App\\":  "src/"},
         "files": [ "src/functions.php" ]
