--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,10 @@
 {
     "name": "vagrant/c2o-dev-test-form",
     "require": {
-        "ext-json": "^1.6"
+        "ext-json": "^1.6",
+        "ext-PDO": "^7.2"
     },
     "autoload": {
-        "psr-4": { "App\\":  "src/"},
-        "files": [ "src/functions.php" ]
+        "psr-4": { "App\\":  "src/"}
     }
 }
