--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "bootstrap-select": "^1.13.11",
     "css-loader": "^3.2.0",
     "jquery": "^3.4.0",
     "lodash": "^4.17.15",
