--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
     "name": "vagrant/c2o-dev-test-form",
     "require": {
         "ext-json": "^1.6",
-        "ext-PDO": "^7.2"
+        "twig/twig": "^2.11",
+        "ext-PDO": "^0.0.0"
     },
     "autoload": {
         "psr-4": { "App\\":  "src/"}
