--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "copy-webpack-plugin": "^5.0.4",
     "less-loader": "^5.0.0",
     "mini-css-extract-plugin": "^0.4.5",
     "node-sass": "^4.12.0",
