Refactored the controller to be a Controller, added it to a Controller namespace and directory.
Moved the Views and twig cache into the 'src' folder too.

Added missing doc blocks to methods.

--- a/public/.htaccess
+++ b/public/.htaccess
@@ -2,13 +2,7 @@
 Order allow,deny
 Deny from all
 </Files>
-
-<Files views/*>
-Order allow,deny
-Deny from all
-</Files>
-
-<Files cache/*>
+<Files error.php>
 Order allow,deny
 Deny from all
 </Files>
